...
  @override
  Widget build(BuildContext context) {
   
    final cart = context.watch<CartProvider>().cart;
    return  Scaffold(
      appBar: AppBar(
        title: const Text('Cart'),
        centerTitle: true,
        ),
      
      body: Center(
        child: ListView.builder(
          
...
                                   
                                        context.read<CartProvider>().removeProduct(cartItem);
                                      
                                        Navigator.of(context).pop();
                                
                                
                                 }, child:const Text('Yes', 
                                 style: TextStyle(
                                    color: Colors.red,
                                    fontWeight: FontWeight.bold))),      

                              
                                  
...
