final products= [{
   'id':'0',
  'title':'Men\'s Sergio Tachini',
  'price':80.0,
  'company':'Sergio Tacini',
  'sizes':[40,43,44,45],
  'imageUrl':'images/shoes1.jpg',
},

{
   'id':'1',
  'title':'Men\'s Nike Shoes',
  'price':135.0,
  'company':'Nike',
  'sizes':[40,41,42,43,44,45],
  'imageUrl':'images/shoes2.jpg',
},

{
  'id':'2',
  'title':'Men\'s Rebook Shoes',
  'price':75.0,
  'company':'Rebook',
  'sizes':[41,42,43],
  'imageUrl':'images/shoes3.jpg',
},


{
  'id':'3',
  'title':'Men\'s Lasocki Shoes',
  'price':44.5,
  'company':'Lascoki',
  'sizes':[41,42],
  'imageUrl':'images/shoes4jpg.jpg',
}

];


